--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -24,7 +24,7 @@
       animation-delay: 0.3s;
     }
     .meta {
-       -webkit-animation-duration: 1s;
+      -webkit-animation-duration: 1s;
       animation-duration: 1s;
       -webkit-animation-fill-mode: both;
       animation-fill-mode: both;
@@ -39,8 +39,8 @@
       animation-name: fadeInUp;
       animation-delay: 0.7s;
     }
-    a.inline-button{
-       -webkit-animation-duration: 1s;
+    a.inline-button {
+      -webkit-animation-duration: 1s;
       animation-duration: 1s;
       -webkit-animation-fill-mode: both;
       animation-fill-mode: both;
@@ -55,8 +55,23 @@
   }
 
   .blog-banner {
-    // background-color: #333333;
-    background-image: url(/assets/images/bg-image/pattern-bg.png);
+    background-color: #333333;
+    background-image: url(/assets/images/bg-image/pattern-1.png);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    z-index: 1;
+    &::after {
+      position: absolute;
+      content: "";
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: #1c1c1c;
+      z-index: -1;
+      opacity: 0.7;
+    }
 
     img {
       object-fit: contain;
