Remove footer section aos
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -203,8 +203,7 @@
     <div class="footer-top">
       <div class="container">
         <div class="columns is-mobile is-multiline is-variable is-1-mobile">
-          <div class="column is-full-mobile is-one-third-desktop is-one-third-widescreen is-one-third-tablet mb-15"
-            data-aos="fade-up">
+          <div class="column is-full-mobile is-one-third-desktop is-one-third-widescreen is-one-third-tablet mb-15">
             <div class="single-footer-widget">
               <!-- logo start -->
               <div class="footer-logo">
@@ -254,7 +253,7 @@
             </div>
           </div>
 
-          <div class="column is-half-mobile" data-aos="fade-up" data-aos-duration="500">
+          <div class="column is-half-mobile">
             <div class="single-footer-widget">
               <!-- footer menu start -->
               <div class="footer-menu is-info">
@@ -270,7 +269,7 @@
             </div>
           </div>
 
-          <div class="column is-half-mobile" data-aos="fade-up" data-aos-duration="600">
+          <div class="column is-half-mobile">
             <div class="single-footer-widget">
               <!-- footer menu start -->
               <div class="footer-menu is-success">
@@ -286,7 +285,7 @@
             </div>
           </div>
 
-          <div class="column is-half-mobile" data-aos="fade-up" data-aos-duration="700">
+          <div class="column is-half-mobile">
             <div class="single-footer-widget">
               <!-- footer menu start -->
               <div class="footer-menu is-warning">
@@ -301,7 +300,7 @@
             </div>
           </div>
 
-          <div class="column is-half-mobile" data-aos="fade-up" data-aos-duration="800">
+          <div class="column is-half-mobile">
             <div class="single-footer-widget">
               <!-- footer menu start -->
               <div class="footer-menu is-danger">
