Add go to top fn
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -16,6 +16,8 @@
 .fig-style {
   max-height: 650px;
   overflow: hidden;
+  border: 1px solid #e7e7e7;
+  border-radius: 10px;
   img {
     user-select: none;
     display: block;
