Add diff scroll option for diff page
Signed-off-by: Al Asad Nur Riyad <asadnurriyad@appscode.com>

--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -270,6 +270,10 @@
             </div>
             {{ end }}
           </div>
+          <!--Image From No Data-->
+          <div>
+            <p id="nodata-content" class="is-hidden">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, totam.</p>
+          </div>
           <!-- grid view end  -->
 
           <!-- list view start  -->
