--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -374,6 +374,11 @@
             {{ end }}
           </div>
           <!-- list view end -->
+
+          <!--No Items-->
+          <div>
+            <p id="nodata-content" class="is-hidden">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, totam.</p>
+          </div>
         </div>
       </div>
     </div>
