Fix no data content
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -272,7 +272,7 @@
           </div>
           <!--Image From No Data-->
           <div>
-            <p id="nodata-content" class="is-hidden">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, totam.</p>
+            <p id="nodata-content" class="is-hidden">No data found</p>
           </div>
           <!-- grid view end  -->
 
